# madr

./: pyproject.toml
madr/: app.py
